fix: Ensure consistend spacing between digits regardless of decimal presence

--- a/digit-style.css
+++ b/digit-style.css
@@ -84,7 +84,7 @@
     flex-direction: column;
     align-items: stretch;
     flex-grow: 0;
-
+    width: var(--digit-border-size);
 }
 
 .decimal-wrapper {
